--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Leospa</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400|Rufina:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"/>
     <link rel="stylesheet" href="css/reset.css">
@@ -188,7 +188,7 @@
 
         <section class="quote">
             <div class="container">
-              <div class="quote__item">
+              <div class="quote__item mySlides fade">
                 <img src="./img/quote.png" alt="" />
                 <p class="desc">
                   First i beast be fruitful open you tree all Won't can't likeness
@@ -200,12 +200,48 @@
                 <img src="./img/client-1.png" alt="" class="author" />
                 <p class="author-name">Jack Marsh, <span>Executive</span></p>
               </div>
-              <ul class="quote__nav">
-                <li></li>
-                <li class="active"></li>
-                <li></li>
-                <li></li>
-              </ul>
+              <div class="quote__item mySlides fade">
+                <img src="./img/quote.png" alt="" />
+                <p class="desc">
+                    First i beast be fruitful open you tree all Won't can't likeness
+                    and you're have whales creature seed to two grass life blessed you
+                    meat shall you winged under from their there he That you're one
+                    called gather make much red wherein set fourth green bearing fifth
+                    replenish given she had.
+                </p>
+                <img src="./img/client-1.png" alt="" class="author" />
+                <p class="author-name">Jack Loren, <span>Executive</span></p>
+              </div>
+              <div class="quote__item mySlides fade">
+                <img src="./img/quote.png" alt="" />
+                <p class="desc">
+                  First i beast be fruitful open you tree all Won't can't likeness
+                  and you're have whales creature seed to two grass life blessed you
+                  meat shall you winged under from their there he That you're one
+                  called gather make much red wherein set fourth green bearing fifth
+                  replenish given she had.
+                </p>
+                <img src="./img/client-1.png" alt="" class="author" />
+                <p class="author-name">Jack John, <span>Executive</span></p>
+              </div>
+              <div class="quote__item mySlides fade">
+                <img src="./img/quote.png" alt="" />
+                <p class="desc">
+                  First i beast be fruitful open you tree all Won't can't likeness
+                  and you're have whales creature seed to two grass life blessed you
+                  meat shall you winged under from their there he That you're one
+                  called gather make much red wherein set fourth green bearing fifth
+                  replenish given she had.
+                </p>
+                <img src="./img/client-1.png" alt="" class="author" />
+                <p class="author-name">Jack Trump, <span>Executive</span></p>
+              </div>
+              <div class="dot-container">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(4)"></span>
+              </div> 
             </div>
         </section>
 
@@ -511,4 +547,5 @@
 
     </div>
 </body>
+<script src="./js/quoteslide.js"></script>
 </html>
