--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                         <img src="./img/logo.png" alt="">
                     </a>
                     <nav class="menu">
+                        <i class="fas fa-times menu__close"></i>
                         <ul class="menu__list">
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Home</a>
@@ -36,8 +37,9 @@
                             </li>
                         </ul>
                     </nav>
+                    <i class="fas fa-bars menu__collapse"></i>
                 </div>
-                <i class="fas fa-bars menu__collapse"></i>
+                
                 <div class="header__content">
                     <span class="header__content-slogan">Spa & Beauty</span>
                     <h1 class="header__content-title">
@@ -548,4 +550,5 @@
     </div>
 </body>
 <script src="./js/quoteslide.js"></script>
+<script src="./js/main.js"></script>
 </html>
