--- a/index.html
+++ b/index.html
@@ -508,8 +508,8 @@
 
     <footer class="footer">
         <div class="container">
-          <a href="index.html" class="footer__logo">
-            <img src="./images/logo.png" alt="" />
+          <a href="" class="footer__logo">
+            <img src="./img/logo.png" alt="">
           </a>
           <nav class="menu">
             <ul class="menu__list">
